# qiskit-zx-transpiler

./: .gitignore  .gitmodules  README.md  mypy.ini  pyproject.toml  requirements.txt  run_tests.sh  runtests.sh  zx_transpiler_pass_demo.ipynb
.github/workflows/: test.yml
benchmarking/: README.md  benchmarks_output.txt  check_segmentation.py  examine_benchmark_circuit.ipynb  examine_benchmark_circuit.py.ipynb  profile_qiskit.py  run_benchmarks.py  run_benchmarks.sh
test/: __init__.py  _helpers.py  test_conversion.py  test_hybrid.py  test_optimize_unitary.py  test_permutation.py  test_zxpass.py
zxpass/: __init__.py  plugin.py  zxpass.py
